# sveltekit-axum

./: Cargo.toml  LICENSE  README.md  flake.nix  librusty_v8.nix
demoapp/: Cargo.toml  package-lock.json  package.json  svelte.config.js
demoapp/adapter/: adapter.js  entry.js
demoapp/src/: main.rs
demoapp/src/routes/: +page.svelte
demoapp/src/routes/echo/: +server.ts
demoapp/src/routes/slowecho/: +server.ts
sveltekit_axum/: Cargo.toml
sveltekit_axum/src/: lib.rs
sveltekit_axum/src/axum_compat/: axum_compat.js  mod.rs  request.js  request.rs  response.js  response.rs
sveltekit_axum/src/jsrunner/: bootstrap.js  mod.rs  naive.rs  parallel.rs  runtime.rs
