[package]
name = "demoapp"
version = "0.1.0"
edition = "2021"

[dependencies]
sveltekit-axum = { path = "./../sveltekit_axum" }

serde = { version = "1.0.210", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

axum = { version = "0.7.5", features = ["http2"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
include_dir = "0.7.4"
