[package]
name = "sveltekit-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
include_dir = "0.7.4"
mime = "0.3.17"
mime_guess = "2.0.5"
serde = { version = "1.0.210", features = ["derive"] }
tokio = "1.36.0"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1.40"
hyper = "1.4.1"
reverse-proxy-service = { git = "https://github.com/manorom/reverse-proxy-service.git", rev = "fda8bf28b4c602bdcf5f941b584e3e4940a1491e" }
# reverse-proxy-service = "0.2.1"

deno_console = "0.171.0"
deno_core = "0.311.0"
deno_fetch = "0.195.0"
deno_url = "0.171.0"
deno_web = "0.202.0"
deno_webidl = "0.171.0"
deno_net = "0.163.0"
deno_crypto = "0.185.0"
serde_v8 = "0.220.0"

[patch.crates-io]
# reverse_proxy_service = { git = "https://github.com/manorom/reverse-proxy-service.git", branch = "hyper-1.0.0" }
